Changed title and intro

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="bigger">
           
           <div>
-            <p><strong>Brew-havior: uncovering factors that affect your opinion about a beer</strong></p>
+            <p><strong>Brew-havior: Uncovering the factors that shape our beer preferences</strong></p>
 <!--The explore this datastory box --> 
             <a href="#data-story-title">
               <h3 class="animated delay-2s fadeInDown">
@@ -144,9 +144,12 @@
           <h2>A Leak in the STEM Pipeline: Taking Algebra Early</h2>
           <h3>DEC 2022 | EPFL</h3> -->
           <p>
-            One would think that only taste is decisive for a beer evaluation. 
-            We want to get to the bottom of this and see how big the influence of other sensory perceptions is.
-            We will also examine how external factors, such as the economy or culture, influence our opinions.
+            One would think that only taste is decisive for a beer evaluation. But is this true? <br>
+            Throughout our data story we will investigate how important other sensory features are and how they
+            are influenced by external factors like culture.
+            Moreover, we want to find out if our opinion may be influenced by environmental factors like
+            the economy.<br>
+            Join us on a malty journey to the definition of a good beer.
             <br><br>
           </p>
 
