description for loics figures

--- a/index.html
+++ b/index.html
@@ -379,7 +379,10 @@
               3 of our 4 clusters have a preference for IPA. These are known for their hoppy, bitter flavor and 
               aroma, which is achieved by using large amounts of hops during the brewing process. Cluster 6 has a 
               preference for a subtype called American IPA, not surprising that it corresponds to the east coast 
-              of the US.
+              of the US. <br>
+              In the following graphs, we chose to show the most frequent words for cluster 7, 
+              which most likely represent Europe. They correspond to very well and poorly reviewed beers, 
+              respectively.
             </p>
 
           </div>
@@ -418,7 +421,9 @@
             <p>
               Only one group stands out by having a strong preference for Pale Lager. Those are light, crisp beers 
               with low to medium hop bitterness and subtle malt flavors, often served chilled and popular as a 
-              refreshing drink. Most countries in this group stand in South America.
+              refreshing drink. Most countries in this group stand in South America. <br>
+              The following graphs show the most common words for cluster 10..  They, again, correspond to 
+              very well and poorly reviewed beers, respectively.
             </p>
           </div>
         </div>
