--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="A Leak in the STEM Pipeline: Taking Algebra Early">
+  <meta name="twitter:title" content="Brew-havior in beer ratings">
   <meta name="twitter:creator" content="@usedgov">
   <meta name="twitter:description" content="Algebra is a milestone for students' success in science, technology, engineering, and math. Using federal data, we examine 8th graders' access to and enrollment in Algebra I.">
   <meta name="twitter:image" content="full http(s) image url here">
 
-  <meta property="og:title" content="A Leak in the STEM Pipeline: Taking Algebra Early">
+  <meta property="og:title" content="Brew-havior in beer ratings">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www2.ed.gov/datastory/stem/algebra/index.html">
   <meta property="og:image" content="full http(s) image url here">
