changed the description text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Algebra is a milestone for students' success in science, technology, engineering, and math. Using federal data, the U.S. Department of Education examines 8th graders' access to and enrollment in Algebra I.">
+  <meta name="description" content="Beer is a bewerage that is widely appreciated in our society. But what makes a beer good? Read our data-story to get an insight.">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   <title>Brew-havior in beer ratings</title>
@@ -19,14 +19,14 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Brew-havior in beer ratings">
   <meta name="twitter:creator" content="@usedgov">
-  <meta name="twitter:description" content="Algebra is a milestone for students' success in science, technology, engineering, and math. Using federal data, we examine 8th graders' access to and enrollment in Algebra I.">
+  <meta name="twitter:description" content="Beer is a bewerage that is widely appreciated in our society. But what makes a beer good? Read our data-story to get an insight.">
   <meta name="twitter:image" content="full http(s) image url here">
 
   <meta property="og:title" content="Brew-havior in beer ratings">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www2.ed.gov/datastory/stem/algebra/index.html">
   <meta property="og:image" content="full http(s) image url here">
-  <meta property="og:description" content="Algebra is a milestone for students' success in science, technology, engineering, and math. Using federal data, we examine 8th graders' access to and enrollment in Algebra I.">
+  <meta property="og:description" content="Beer is a bewerage that is widely appreciated in our society. But what makes a beer good? Read our data-story to get an insight.">
 
   <link rel="shortcut icon" type="image/png" href="">
 
