epfl.ch link added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <meta property="og:title" content="Brew-havior in beer ratings">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www2.ed.gov/datastory/stem/algebra/index.html">
+  <meta property="og:url" content="www.epfl.ch">
   <meta property="og:image" content="full http(s) image url here">
   <meta property="og:description" content="Beer is a bewerage that is widely appreciated in our society. But what makes a beer good? Read our data-story to get an insight.">
 
@@ -1618,7 +1618,7 @@
   <div class="md-modal md-effect-9" id="modal-5">
     <div class="md-content">
       <div>
-        <blockquote><a href="https://www2.ed.gov/admins/lead/account/stateplan17/index.html#map">Many states cite taking Algebra I classes</a> (or passing Algebra I exams) as an outcome measure in
+        <blockquote><a href="www.epfl.ch">Many states cite taking Algebra I classes</a> (or passing Algebra I exams) as an outcome measure in
           their consolidated state plans, which describes how the Every Student Succeeds Act (ESSA) will be implemented
           in their state.</blockquote>
         <i class="fas fa-times md-close"></i>
